--- a/CoffeeShop-BackEnd/package.json
+++ b/CoffeeShop-BackEnd/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js", 
+    "dev": "node server.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "populate-db": "node populate-db.js"
